--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ PORT=3000
 API_PORT=3001
 
 # MongoDB Configuration
-MONGO_URI=mongodb://localhost:27017/destinydrivenfinance
+MONGO_URI=mongodb+srv://destinydrivenfinace:2GoTMaLSaCQHoURM@destinydrivenfinance.iybibld.mongodb.net/destinydrivenfinance?retryWrites=true&w=majority&appName=DestinyDrivenFinance
 # For MongoDB Atlas, use:
 # MONGO_URI=mongodb+srv://<username>:<password>@cluster0.xxxxx.mongodb.net/destinydrivenfinance
 
@@ -13,10 +13,10 @@ JWT_SECRET=destiny_driven_finance_secret_key_change_this_in_production
 # Email Configuration (for development, use Ethereal.email)
 EMAIL_HOST=smtp.ethereal.email
 EMAIL_PORT=587
-EMAIL_USER=your_ethereal_email@ethereal.email
-EMAIL_PASS=your_ethereal_password
-EMAIL_FROM=noreply@destinydrivenfinance.com
-ADMIN_EMAIL=admin@destinydrivenfinance.com
+EMAIL_USER=destinydrivenf@gmail.com
+EMAIL_PASS=your_gmail_app_password
+EMAIL_FROM=destinydrivenf@gmail.com
+ADMIN_EMAIL=destinydrivenf@gmail.com
 
 # Frontend URL
 FRONTEND_URL=http://localhost:5173
